--- a/src/app/cars/by-category-cars/by-category-cars.component.html
+++ b/src/app/cars/by-category-cars/by-category-cars.component.html
@@ -7,7 +7,7 @@
           <mat-list-option *ngFor="let car of takeCarsByCategory(category); let i = index"
             [selected]="car&&i==0 && firstSelected" (click)="selectCar(car)">
             <span class="model"><b>{{car.model}}</b></span>
-            <span class="brand">{{car.brand}}</span>
+            <span class="brand">{{getBrandName(car?.brand)}}</span>
           </mat-list-option>
         </mat-selection-list>
         <div class="container__info">
@@ -20,7 +20,7 @@
               <h3>{{selectedCar.model}}</h3>
             </li>
             <li>
-              <h4>Dealers: <b>{{selectedCar.brand}}</b></h4>
+              <h4>Dealers: <b>{{getBrandName(selectedCar.brand)}}</b></h4>
             </li>
             <li>
               <h4>Class: <b>{{selectedCar.class |titlecase}}</b></h4>
